@@ -198,6 +198,10 @@ if ENABLE_MMNORMALIZE
 SUBDIRS += plugins/mmnormalize
 endif
 
+if ENABLE_MMJSONPARSE
+SUBDIRS += plugins/mmjsonparse
+endif
+
 if ENABLE_ORACLE
 SUBDIRS += plugins/omoracle
 endif
